Finish sing-up || and continue to work with JWT
