# internal/transports/rest/handler.go
@@ -26,7 +26,7 @@ type Handler struct {
 
 func NewHandler(services *service.Services) *Handler {
 	return &Handler{
-		Students:    NewStudentsHandler(services.Students),
+		//Students:    NewStudentsHandler(services.Students),
 		Users:       NewUsersHandler(services.Users),
 		Teachers:    NewTeachersHandler(services.Teachers),
 		Employees:   NewEmployeesHandler(services.Employees),
@@ -44,20 +44,20 @@ func (h *Handler) InitRouter() *mux.Router {
 	router.PathPrefix("/swagger/").Handler(httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:8080/swagger/doc.json"), // URL для Swagger JSON
 	))
+	h.Users.initRoutes(router)
+	// auth := router.PathPrefix("/login").Subrouter()
+	// {
+	// 	auth.HandleFunc("/sign-up", h.signUp).Methods(http.MethodPost)
+	// }
 
-	auth := router.PathPrefix("/login").Subrouter()
-	{
-		auth.HandleFunc("/sign-up", h.signUp).Methods(http.MethodPost)
-	}
-
-	students := router.PathPrefix("/students").Subrouter()
-	{
-		students.HandleFunc("", h.createStudent).Methods(http.MethodPost)
-		students.HandleFunc("/{id:[0-9]+}", h.deleteStudent).Methods(http.MethodDelete)
-		students.HandleFunc("/{id:[0-9]+}", h.updateStudent).Methods(http.MethodPatch)
-		students.HandleFunc("", h.getAllStudents).Methods(http.MethodGet)
-		students.HandleFunc("/{id:[0-9]+}", h.getStudentById).Methods(http.MethodGet)
-	}
+	// students := router.PathPrefix("/students").Subrouter()
+	// {
+	// 	students.HandleFunc("", h.createStudent).Methods(http.MethodPost)
+	// 	students.HandleFunc("/{id:[0-9]+}", h.deleteStudent).Methods(http.MethodDelete)
+	// 	students.HandleFunc("/{id:[0-9]+}", h.updateStudent).Methods(http.MethodPatch)
+	// 	students.HandleFunc("", h.getAllStudents).Methods(http.MethodGet)
+	// 	students.HandleFunc("/{id:[0-9]+}", h.getStudentById).Methods(http.MethodGet)
+	// }
 	return router
 }
 
